--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,11 @@
     font-size: 12px;
     box-sizing: border-box;
 }
+
 body {
     background-color: #f1f1f1;
 }
+
 .navbar-nav {
     -webkit-border-radius: 0 7px 7px 0;
     background: linear-gradient(0deg,#fa9325 0,#f9a92c 100%);
@@ -94,9 +96,11 @@ nav {
     min-width: 940px;
     width: 100%;
 }
+
 .bg-light {
     background-color: #f1f1f1!important;
 }
+
 .navbar-color {
 
     background-color: #e0e6e9!important;
@@ -108,16 +112,18 @@ nav {
     width: 100%;
     height: 26px;
 }
+
 .submit-search-box {
     z-index: 1000;
     border: 0;
     background: 0;
 }
+
 .header__container-search__icon {
     color: #fa9425;
     position: absolute;
-    left: 681px;
-    top: 20px!important;
+    left: 635px;
+    top: 0px!important;
     width: 16px;
     height: 100%;
     font-size: 15px;
@@ -126,6 +132,7 @@ nav {
     padding: 6px 0;
     cursor: pointer;
 }
+
 [class^="icon-"], [class*=" icon-"] {
     font-family: 'icomoon'!important;
     speak: none;
@@ -137,18 +144,242 @@ nav {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
 .header__container-search {
     float: left;
     margin-left: 46px;
     max-width: 655px;
     width: 65%;
 }
+
 .login a, .carrinho a{
     
     text-decoration: none;
     color: #727272!important;
     font-size: 14px;
 }
+
 i {
     color: #fa9425;
+}
+.side-bar {
+    float: left;
+    width: 220px;
+}
+
+.side-bar__menu {
+    position: absolute;
+    width: 220px;
+    top: 0;
+    left: 0px;
+    padding-top: 27px;
+    z-index: 9995;
+}
+.ativo-container .side-menu__titulo {
+    border-radius: 9px 9px 0 0;
+}
+.side-menu__titulo {
+    background-color: #FFF;
+    border-radius: 9px;
+    color: #666;
+    padding: 18px 17px 18px 26px;
+    cursor: pointer;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 13px;
+}
+
+.p-relative {
+    position: relative!important;
+}
+
+.container {
+    margin: 0 auto;
+    max-width: 1280px;
+    min-width: 940px;
+    width: 100%;
+}
+
+.css__content-dropdown>.side-bar__content:nth-child(1) {
+    border-radius: 0 0 9px 9px;
+}
+
+.side-bar__content {
+    background-color: #FFF;
+    border-radius: 9px;
+    color: #666;
+    padding: 0 17px 35px 26px;
+    margin-bottom: 10px;
+}
+
+.side-menu__lista:first-child {
+    border-top: solid 1px #e5e5e5;
+    width: 100%;
+    padding-bottom: 10px;
+}
+
+.side-menu__lista {
+    width: 100%;
+}
+
+.d-inlineblock {
+    display: inline-block;
+}
+.d-block {
+    display: block!important;
+}
+
+.side-menu__lista .item__titulo strong {
+    text-transform: uppercase;
+    font-size: 13px;
+    margin-top: 15px;
+    display: inline-block;
+}
+strong {
+    font-weight: bold;
+}
+
+.link_drop--sidebar {
+    cursor: pointer;
+    float: left;
+    width: 100%;
+    padding: 5px 0;
+}
+
+.side-menu__lista__item.item__link a {
+    font-size: 14px;
+    margin-top: 0;
+    display: inline-block;
+}
+
+a {
+    font-size: inherit;
+    text-decoration: none;
+    color: inherit;
+}
+
+.side-menu__lista__item.item__link span {
+    font-size: 14px;
+    margin-top: 13px;
+}
+
+a {
+    font-size: inherit;
+    text-decoration: none;
+    color: inherit;
+}
+
+.ativo-container .container__body {
+    width: 82%;
+}
+.container__body {
+    float: right;
+    width: 100%;
+}
+
+.ativo-container .container__body {
+    width: 82%;
+}
+.container__body {
+    float: right;
+    width: 100%;
+}
+
+.swiper__banner .swiper-wrapper {
+    left: 0!important;
+}
+
+
+.swiper-container-android .swiper-slide, .swiper-wrapper {
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+}
+
+.swiper-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-transition-property: -webkit-transform;
+    transition-property: -webkit-transform;
+    -o-transition-property: transform;
+    transition-property: transform;
+    transition-property: transform,-webkit-transform;
+    -webkit-box-sizing: content-box;
+    box-sizing: content-box;
+}
+
+.swiper__banner .swiper-slide {
+    width: 100%;
+    overflow: hidden;
+}
+.swiper-container-fade .swiper-slide {
+    pointer-events: none;
+    -webkit-transition-property: opacity;
+    -o-transition-property: opacity;
+    transition-property: opacity;
+}
+
+.swiper-slide {
+    -webkit-flex-shrink: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    -webkit-transition-property: -webkit-transform;
+    transition-property: -webkit-transform;
+    -o-transition-property: transform;
+    transition-property: transform;
+    transition-property: transform,-webkit-transform;
+}
+
+
+.swiper__banner .swiper-slide {
+    width: 100%;
+    overflow: hidden;
+}
+
+.swiper-container-fade .swiper-slide {
+    pointer-events: none;
+    -webkit-transition-property: opacity;
+    -o-transition-property: opacity;
+    transition-property: opacity;
+}
+.swiper-slide {
+    -webkit-flex-shrink: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    -webkit-transition-property: -webkit-transform;
+    transition-property: -webkit-transform;
+    -o-transition-property: transform;
+    transition-property: transform;
+    transition-property: transform,-webkit-transform;
+}
+
+.js__content--slider {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto 0;
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
+    text-align: center;
+    background: white;
+}
+
+.ativo-container .banner-home__link__img {
+    left: -12%;
+    position: relative;
+}
+fieldset, img {
+    border: 0;
 }
